--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
       "@testing-library/jest-dom": "^5.11.4",
       "@testing-library/react": "^11.1.0",
       "@testing-library/user-event": "^12.1.10",
-      "antd": "^4.7.3",
+      "antd": "^4.8.0",
+      "axios": "^0.21.0",
       "immer": "^7.0.14",
       "node-sass": "^4.14.1",
       "prop-types": "^15.7.2",
